# dbt-fix-agent-py

./: .gitignore  README.md  pyproject.toml
src/dbt_fixer/: __init__.py  _numeric.py  allowlist.py  applier.py  bounds.py  dbt_parse.py  delivery_common.py  diffing.py  diffparse.py  entrypoint.py  env.py  fencing.py  fix_pipeline.py  intake.py  logging_utils.py  pathsafe.py  pipeline.py  proposal.py  reaudit.py  redaction.py  refuter.py  retry_loop.py  runners.py  scratch.py  secrets.py  slack_delivery.py  status.py
src/dbt_fixer/tools/: __init__.py  repo_tools.py
tests/: conftest.py  test_allowlist.py  test_applier.py  test_bounds.py  test_dbt_parse.py  test_delivery_common.py  test_diffing.py  test_diffparse.py  test_entrypoint.py  test_env.py  test_fencing.py  test_intake.py  test_no_network_static.py  test_pathsafe.py  test_pipeline.py  test_prompt_injection.py  test_proposal.py  test_reaudit.py  test_redaction.py  test_refuter.py  test_repo_tools.py  test_retry_loop.py  test_scratch.py  test_secrets.py  test_slack_delivery.py  test_status.py
tests/real_process/: .gitkeep  test_dbt_parse_disabled.py  test_fresh_install.py  test_reaudit_import_isolation.py
